Rename Main.java to JavaArrayList.java